--- a/ParseStarterProject/src/main/res/layout/activity_rider.xml
+++ b/ParseStarterProject/src/main/res/layout/activity_rider.xml
@@ -8,12 +8,12 @@
     android:layout_width="match_parent">
 
 <fragment
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RiderActivity" />
+    tools:context=".RiderActivity"
+    tools:layout="@layout/activity_rider" />
 
     <Button
         android:id="@+id/callUberButton"
@@ -26,5 +26,17 @@
         android:text="Call An Uber"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="logout"
+        android:text="Logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
